--- a/styleProyecto02.css
+++ b/styleProyecto02.css
@@ -52,6 +52,11 @@ body {
 /*FIN CONFIRGURACIÓN HEADER Y NAVBAR*/
 
 /*INICIO CONFIGURACIÓN BODY*/
+.titulo {
+    display: flex;
+    justify-content: center;
+}
+
 .tituloH1 {
     text-align: center;
     padding-top: 40px;
@@ -62,6 +67,10 @@ body {
     text-align: center;
     color: blue;
     padding-bottom: 150px;
+}
+
+.div-Nombre {
+    justify-items: center;
 }
 
 .tituloMail {
@@ -98,11 +107,11 @@ body {
     border-radius: 5px;
 }
 
-.div-Campos {
+/* .div-Campos {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-}
+} */
 
 .div-Mail {
     padding-top: 50px;
@@ -149,7 +158,7 @@ textarea {
     padding-bottom: 30px;
 }
 
-.boton-1 {
+.boton-Agregar {
     padding: 8px 10px;
     background-color: #369ba8;
     border-radius: 5px;
@@ -160,12 +169,13 @@ textarea {
     color: whitesmoke;
 }
 
-.boton-1:hover {
+.boton-Agregar:hover {
     background-color: whitesmoke;
     color: #369ba8;
 }
 
 .oculta-botonAgrega {
+    position: fixed;
     visibility: hidden;
 }
 
@@ -191,6 +201,28 @@ textarea {
     color: #369ba8;
 }
 
+.boton-NoActualizar {
+    position: fixed;
+    visibility: hidden;
+}
+
+.muestra-NoActualizar {
+    padding: 8px 10px;
+    background-color: #369ba8;
+    border-radius: 5px;
+    border: 2px solid #369ba8;
+    letter-spacing: 0.2mm;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    color: whitesmoke;
+    visibility: visible;
+}
+
+.muestra-NoActualizar:hover {
+    background-color: whitesmoke;
+    color: #369ba8;
+}
+
 .boton-Limpiar {
     padding: 8px 10px;
     background-color: #369ba8;
@@ -207,14 +239,19 @@ textarea {
     color: #369ba8;
 }
 
-.camposVacios {
+.msjCamposVacios {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
+    justify-content:center;
     background-color: rgba(128, 128, 128, 0.541);
     height: 60px;
-    width: auto;
+}
+
+.ocultar-msjCamposVacios {
+    position: fixed;
+    visibility: hidden;
 }
 
 .imgCamposVacios {
@@ -233,7 +270,8 @@ h4 {
     flex-wrap: wrap;
     justify-content: space-around;
     padding-bottom: 20px;
-    /* visibility: hidden; */
+    visibility: hidden;
+    position: fixed;
 }
 
 .edicion-botones {
@@ -242,27 +280,7 @@ h4 {
     flex-wrap: wrap;
 }
 
-.botonEliminar {
-    padding-right: 20px;
-}
-
-.boton-2 {
-    padding: 8px 10px;
-    background-color: whitesmoke;
-    border-radius: 5px;
-    border: 2px solid #f44336;
-    letter-spacing: 0.2mm;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    color: black;
-}
-
-.boton-2:hover {
-    background-color: #f44336;
-    color: whitesmoke;
-}
-
-.boton-3 {
+.boton-Editar {
     padding: 8px 20px;
     background-color: #555555;
     border-radius: 5px;
@@ -273,25 +291,50 @@ h4 {
     color: whitesmoke;
 }
 
-.boton-3:hover {
+.boton-Editar:hover {
     padding: 8px 20px;
     border: 2px solid #555555;
     background-color: whitesmoke;
     color: black;
 }
 
+.boton-Eliminar {
+    padding: 8px 10px;
+    background-color: whitesmoke;
+    border-radius: 5px;
+    border: 2px solid #f44336;
+    letter-spacing: 0.2mm;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    color: black;
+}
+
+.boton-Eliminar:hover {
+    background-color: #f44336;
+    color: whitesmoke;
+}
+
+.desactivar-botonEliminar {
+    visibility: hidden;
+}
+
 .tabla-Datos {
+    visibility: hidden;
+}
+
+.muestra-Tabla {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     padding-bottom: 50px;
-    /* visibility: hidden; */
+    visibility: visible;
 }
 
 table th {
     padding: 10px 100px;
     color: #555555;
     background-color: #f0ebebd0;
+    text-align: center;
 }
 
 input:valid {
@@ -302,3 +345,30 @@ input:invalid:required {
     background-color: rgba(255, 0, 0, 0.459);
 }
 /*FIN CONFIGURACIÓN BODY*/
+
+/*INICIO CONFIGURACIÓN FOOTER*/
+.section-footer {
+    padding-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-bottom: 20px;
+    padding-left: 30px;
+}
+
+.p-footer {
+    text-align: center;
+    color: rgba(146, 142, 142, 0.616);
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+
+.linea {
+    height: 0.15px;
+    width: 50%;
+    margin: auto;
+    background-color: rgba(206, 203, 203, 0.25);
+    border-color: rgba(206, 203, 203, 0.25);
+    border-radius: 0.2px;
+}
+/*INICIO CONFIGURACIÓN FOOTER*/
