--- a/styleProyecto02.css
+++ b/styleProyecto02.css
@@ -7,7 +7,6 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 60px 0px 0px;
-    width: fit-content;
 }
 
 
@@ -56,14 +55,12 @@ body {
     display: flex;
     justify-content: center;
     padding-bottom: 50px;
-    border-color: #f44336;
 }
 
 .tituloH1 {
     text-align: center;
-    padding-top: 40px;
-    font-size: 40px;
-    border-color: #f44336;
+    padding-top: 30px;
+    font-size: 35px;
 }
 
 .parrafo {
@@ -73,35 +70,25 @@ body {
 
 .Campos {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 2fr);
     grid-gap: 10px;
     grid-auto-rows: minmax(80px, auto);
-    justify-items: center;
 }
 
-.div-Nombre {grid-column-start: 1;}
+.div-Nombre, .div-apMaterno, .div-Puesto {
+    grid-column-start: 1;
+    justify-self: flex-end;
+    padding-right: 55px;
+}
 
-.div-apPaterno {grid-column-start: 2;}
+.div-apPaterno, .div-Mail, .div-Telefono {
+    grid-column-start: 2;
+    padding-left: 63px;
+}
 
-.div-apMaterno {grid-column-start: 1;}
-
-.div-Mail {grid-column-start: 2;}
-
-.div-Puesto {grid-column-start: 1;}
-
-.div-Telefono {grid-column-start: 2;}
-
-.nombre {padding-bottom: 5px;}
-
-.apellidoPaterno {padding-bottom: 5px;}
-
-.apellidoMaterno {padding-bottom: 5px;}
-
-.tituloMail {padding-bottom: 5px;}
-
-.puesto {padding-bottom: 5px;}
-
-.telefono {padding-bottom: 5px;}
+.nombre, .apellidoPaterno, .apellidoMaterno, .tituloMail, .puesto, .telefono {
+    padding-bottom: 5px;
+}
 
 /* .h3-Comentarios {
     padding-bottom: 10px;
@@ -221,9 +208,17 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-    justify-content:center;
+    justify-content: center;
     background-color: rgba(128, 128, 128, 0.541);
-    height: 50px;
+    height: 30px;
+    width: 800px;
+}
+
+.sinDatos {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+    font-size: 15px;
 }
 
 .ocultar-msjCamposVacios {
@@ -239,7 +234,7 @@ body {
 }
 
 .imgVacios {
-    width: 20px;
+    width: 18px;
 }
 
 .tablaVacia {
@@ -247,19 +242,32 @@ body {
     align-items: center;
 }
 
-h4 {
-    font-size: 20px;
+.rowNameA, .rowCorreo, .rowCargo, .rowTel {
+    justify-content: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: max-content;
 }
 
-.edicion {
-    padding-top: 100px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding-bottom: 20px;
+.edicionOculta {
     visibility: hidden;
     position: fixed;
+}
+
+.muestraEdicion {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    padding-bottom: 10px;
+    visibility: visible;
+}
+
+h4 {
+    font-size: 25px;
+}
+
+.textoRegistrosVisibles {
+    font-size: 16px;
 }
 
 .edicion-botones {
@@ -269,7 +277,7 @@ h4 {
 }
 
 .boton-Editar {
-    padding: 8px 20px;
+    padding: 2px 30px;
     background-color: #555555;
     border-radius: 5px;
     border: 2px solid #555555;
@@ -280,14 +288,12 @@ h4 {
 }
 
 .boton-Editar:hover {
-    padding: 8px 20px;
-    border: 2px solid #555555;
     background-color: whitesmoke;
     color: black;
 }
 
 .boton-Eliminar {
-    padding: 8px 10px;
+    padding: 2px 20px;
     background-color: whitesmoke;
     border-radius: 5px;
     border: 2px solid #f44336;
@@ -312,24 +318,30 @@ h4 {
 
 .muestra-Tabla {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding-bottom: 50px;
+    justify-content: center;
+    padding-bottom: 20px;
     visibility: visible;
+    overflow: auto;
+    overflow-x: auto;
+    overflow-y: scroll;
 }
 
 thead th {
-    padding: 10px 100px;
+    padding: 5px 80px;
     color: whitesmoke;
-    background-color: #0e0d0da8;
+    background-color:  #363945;
     text-align: center;
+    width: min-content;
+    justify-content: center;
+    font-size: 16px;
 }
 
 tbody tr {
     padding: 10px 100px;
     color: black;
-    background-color: #802222d0;
     text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
 input:valid {
@@ -341,16 +353,20 @@ input:invalid:required {
 }
 
 tr:nth-child(even) {
-    background-color: rgba(128, 128, 128, 0.096);
+    background-color: rgba(128, 128, 128, 0.253);
 }
 
 tr:nth-child(odd) {
     background-color: white;
 }
 
-:nth-last-child(-n+2) {
-    column-span: all;
+/* tr:nth-last-child(-n+1) {
+    background-color: #f44336;
 }
+
+td:nth-last-child(-n+1) {
+    background-color: #f44336;
+} */
 /*FIN CONFIGURACIÓN BODY*/
 
 /*INICIO CONFIGURACIÓN FOOTER*/
@@ -366,16 +382,218 @@ tr:nth-child(odd) {
 .p-footer {
     text-align: center;
     color: rgba(146, 142, 142, 0.616);
-    padding-top: 20px;
+    padding-top: 15px;
     padding-bottom: 30px;
+    font-size: 15px;
 }
 
 .linea {
     height: 0.15px;
-    width: 50%;
+    width: 70%;
     margin: auto;
     background-color: rgba(206, 203, 203, 0.25);
     border-color: rgba(206, 203, 203, 0.25);
     border-radius: 0.2px;
 }
 /*INICIO CONFIGURACIÓN FOOTER*/
+
+@media screen and (max-width: 768px) {
+    body {
+        margin: 0 0px;
+        padding: 20px 0px 0;
+        width: 100%;
+    }
+
+    .header {
+        margin: 0 0px;
+        max-width: 100%
+    }
+
+    .header-rigth a {
+        padding-right: 10px;
+    }
+
+    .logoUcamp {
+        padding-left: 10px;
+        width: 30px;
+    }
+    
+    .navEnlace {
+        font-size: 12px;
+    }
+    
+    .titulo {
+        text-align: center;
+        width: fit-content;
+    }
+    
+    .tituloH1 {
+        padding-top: 65px;
+        font-size: 5vw;
+    }
+    
+    .parrafo {
+        text-align: center;
+        font-size: 2vw;
+    }
+    
+    .Campos {
+        grid-gap: 6px;
+        grid-auto-rows: minmax(8vh, auto);
+        font-size: 1.8vw;
+    }
+    
+    .div-Nombre, .div-apMaterno, .div-Puesto {
+        padding-right: 22px;
+    }
+    
+    .div-apPaterno, .div-Mail, .div-Telefono {
+        padding-left: 28px;
+    }
+    
+    .nombre, .apellidoPaterno, .apellidoMaterno, .tituloMail, .puesto, .telefono {
+        padding-bottom: 3px;
+    }
+    
+    /* .h3-Comentarios {
+        padding-bottom: 10px;
+    } */
+    
+    .form-campos input {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 1.8vw;
+        padding: 3px;
+        width: 180px;
+        border-radius: 5px;
+    }
+    
+    /* .div-Comentarios {
+        padding-top: 50px;
+    } */
+    
+    /* textarea {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 0.9vw;
+        padding-left: 10px;
+    } */
+    
+    .botonCampos {
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+
+    .btAgrega {padding-right: 0px;}
+    .btActualiza, .btNoActualizar {padding-right: 30px;}
+    .btLimpiarCampos {padding-left: 0px;}
+    
+    .boton-Agregar, .boton-Limpiar {
+        font-size: 1.6vw;
+        padding: 6px 8px;
+        border-radius: 3px;
+        letter-spacing: 0.1mm;
+    }
+    
+    .muestra-Actualiza, .muestra-NoActualizar {
+        font-size: 1.6vw;
+        padding: 6px 8px;
+        border-radius: 3px;
+        letter-spacing: 0.1mm;
+    }
+        
+    .msjCamposVacios {
+        height: 25px;
+        width: 80vw;
+    }
+    
+    .sinDatos {
+        padding-top: 10px;
+    }
+
+    .imgCamposVacios {
+        padding-right: 5px;
+        padding-top: 5px;
+    }
+    
+    .imgVacios {
+        width: 15px;
+    }
+
+    .pSinDatos {
+        font-size: 1.8vw;
+    }
+    
+    .rowNameA, .rowCorreo, .rowCargo, .rowTel {
+        justify-content: center;
+        padding-left: 8px;
+        padding-right: 8px;
+        font-size: 2vw;
+        width: min-content;
+    }
+    
+    h4 {
+        font-size: 2.5vw;
+    }
+    
+    .textoRegistrosVisibles {
+        font-size: 2vw;
+    }
+    
+    .boton-Editar {
+        padding: 1px 30px;
+        border-radius: 3px;
+        border: 1px solid #555555;
+        font-size: 1.8vw;
+    }
+    
+    .boton-Eliminar {
+        padding: 1px 20px;
+        border-radius: 3px;
+        border: 1px solid #f44336;
+        font-size: 1.8vw;
+    }
+    
+    .muestra-Tabla {
+        display: flex;
+        justify-content: center;
+        padding-bottom: 20px;
+        visibility: visible;
+    }
+    
+    thead th {
+        padding: 5px 80px;
+        color: whitesmoke;
+        background-color:  #363945;
+        text-align: center;
+        width: min-content;
+        justify-content: center;
+        font-size: 16px;
+    }
+    
+    tbody tr {
+        padding: 10px 100px;
+        color: black;
+        text-align: center;
+        justify-content: center;
+    }
+    /*FIN CONFIGURACIÓN BODY*/
+    
+    /*INICIO CONFIGURACIÓN FOOTER*/
+    .section-footer {
+        padding-top: 30px;
+        padding-bottom: 5px;
+        
+    }
+    
+    .p-footer {
+        text-align: center;
+        color: rgba(146, 142, 142, 0.616);
+        padding-top: 10px;
+        font-size: 2vw;
+    }
+    
+    .linea {
+        width: 70%;
+        border-radius: 0.1px;
+    }
+    /*INICIO CONFIGURACIÓN FOOTER*/
+}
